dnstroubleshooting/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  annotations:
      proxy.istio.io/config: |
        proxyMetadata:
          OUTPUT_CERTS: /etc/istio-output-certs
      sidecar.istio.io/userVolumeMount: '[{"name": "istio-certs", "mountPath": "/etc/istio-output-certs"}]'
  labels:
    app: debug
    version: latest
  name: debug
spec:
  containers:
  - image: alpine
    name: debug
    volumeMounts:
    - name: istio-certs
      mountPath: /etc/prom-certs/
  # dnsPolicy: ClusterFirst
  restartPolicy: Never
  volumes:
    - name: istio-certs
      emptyDir:
        medium: Memory
