dnstroubleshooting/k8s-0-control-plane-iptables.txt
# Generated by iptables-save v1.8.7 on Fri Apr 15 16:15:57 2022
*raw
:PREROUTING ACCEPT [2266068:743912251]
:OUTPUT ACCEPT [2285750:964884928]
:cali-OUTPUT - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A cali-OUTPUT -m comment --comment "cali:njdnLwYeGqBJyMxW" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:rz86uTUcEZAfFsh7" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:pN0F5zD0b8yf9W1Z" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:XFX5xbM8B9qR10JG" -j MARK --set-xmark 0x0/0xf0000
-A cali-PREROUTING -i cali+ -m comment --comment "cali:EWMPb0zVROM-woQp" -j MARK --set-xmark 0x40000/0x40000
-A cali-PREROUTING -m comment --comment "cali:mPIOOWmbH3iO0R90" -m mark --mark 0x40000/0x40000 -m rpfilter --validmark --invert -j DROP
-A cali-PREROUTING -m comment --comment "cali:8eOxmFpkWr0RjKXR" -m mark --mark 0x0/0x40000 -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:F-nExspj_POyei0v" -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Fri Apr 15 16:15:57 2022
# Generated by iptables-save v1.8.7 on Fri Apr 15 16:15:57 2022
*mangle
:PREROUTING ACCEPT [12730:763418]
:INPUT ACCEPT [2264761:741930097]
:FORWARD ACCEPT [1355:1989957]
:OUTPUT ACCEPT [2285798:964893328]
:POSTROUTING ACCEPT [2287138:966882385]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A cali-POSTROUTING -m comment --comment "cali:NX-7roTexQ3fGRfU" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-POSTROUTING -m comment --comment "cali:nnqPh8lh2VOogSzX" -j MARK --set-xmark 0x0/0xf0000
-A cali-POSTROUTING -m comment --comment "cali:nquN8Jw8Tz72pcBW" -m conntrack --ctstate DNAT -j cali-to-host-endpoint
-A cali-POSTROUTING -m comment --comment "cali:jWrgvDQ0xEZHmta3" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-PREROUTING -m comment --comment "cali:6BJqBjBC7crtA-7-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:KX7AGNd6rMcDUai6" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:wNH7KsA3ILKJBsY9" -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:Cg96MgVuoPm7UMRo" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Fri Apr 15 16:15:57 2022
# Generated by iptables-save v1.8.7 on Fri Apr 15 16:15:57 2022
*filter
:INPUT ACCEPT [8580:1830288]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8735:2233237]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SERVICES - [0:0]
:cali-FORWARD - [0:0]
:cali-INPUT - [0:0]
:cali-OUTPUT - [0:0]
:cali-cidr-block - [0:0]
:cali-from-hep-forward - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-from-wl-dispatch - [0:0]
:cali-fw-cali8c1d1b5578e - [0:0]
:cali-fw-calif8de763f524 - [0:0]
:cali-pi-_3CJ_GmvE9pcCktVJ2ep - [0:0]
:cali-pri-_4yi5_iSUAwsU8zMHTk - [0:0]
:cali-pri-_kJqfZpgUe7r2t4A-14 - [0:0]
:cali-pri-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pri-kns.kube-system - [0:0]
:cali-pro-_4yi5_iSUAwsU8zMHTk - [0:0]
:cali-pro-_kJqfZpgUe7r2t4A-14 - [0:0]
:cali-pro-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pro-kns.kube-system - [0:0]
:cali-to-hep-forward - [0:0]
:cali-to-host-endpoint - [0:0]
:cali-to-wl-dispatch - [0:0]
:cali-tw-cali8c1d1b5578e - [0:0]
:cali-tw-calif8de763f524 - [0:0]
:cali-wl-to-host - [0:0]
-A INPUT -m comment --comment "cali:Cz_u1IQiXIMmKD4c" -j cali-INPUT
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "cali:wUHhoiAYhphO9Mso" -j cali-FORWARD
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -m comment --comment "cali:S93hcgKJrXEqnTfs" -m comment --comment "Policy explicitly accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A FORWARD -m comment --comment "cali:mp77cMpurHhyjLrM" -j MARK --set-xmark 0x10000/0x10000
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A KUBE-EXTERNAL-SERVICES -p tcp -m comment --comment "ingress-apisix/apisix-gateway:proxy-tcp-0 has no endpoints" -m addrtype --dst-type LOCAL -m tcp --dport 32358 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-EXTERNAL-SERVICES -p tcp -m comment --comment "ingress-apisix/apisix-gateway:apisix-gateway has no endpoints" -m addrtype --dst-type LOCAL -m tcp --dport 31736 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-SERVICES -d 10.96.147.92/32 -p tcp -m comment --comment "ingress-apisix/apisix-dashboard:http has no endpoints" -m tcp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.96.36.112/32 -p tcp -m comment --comment "ingress-apisix/apisix-ingress-controller:http has no endpoints" -m tcp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.96.65.66/32 -p tcp -m comment --comment "ingress-apisix/apisix-gateway:proxy-tcp-0 has no endpoints" -m tcp --dport 9042 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.96.65.66/32 -p tcp -m comment --comment "ingress-apisix/apisix-gateway:apisix-gateway has no endpoints" -m tcp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.96.138.19/32 -p tcp -m comment --comment "ingress-apisix/apisix-admin:apisix-admin has no endpoints" -m tcp --dport 9180 -j REJECT --reject-with icmp-port-unreachable
-A cali-FORWARD -m comment --comment "cali:vjrMJCRpqwy5oRoX" -j MARK --set-xmark 0x0/0xe0000
-A cali-FORWARD -m comment --comment "cali:A_sPAO0mcxbT9mOV" -m mark --mark 0x0/0x10000 -j cali-from-hep-forward
-A cali-FORWARD -i cali+ -m comment --comment "cali:8ZoYfO5HKXWbB3pk" -j cali-from-wl-dispatch
-A cali-FORWARD -o cali+ -m comment --comment "cali:jdEuaPBe14V2hutn" -j cali-to-wl-dispatch
-A cali-FORWARD -m comment --comment "cali:12bc6HljsMKsmfr-" -j cali-to-hep-forward
-A cali-FORWARD -m comment --comment "cali:NOSxoaGx8OIstr1z" -j cali-cidr-block
-A cali-INPUT -p udp -m comment --comment "cali:w7ud0UgQSEi_zKuQ" -m comment --comment "Allow VXLAN packets from whitelisted hosts" -m multiport --dports 4789 -m set --match-set cali40all-vxlan-net src -m addrtype --dst-type LOCAL -j ACCEPT
-A cali-INPUT -p udp -m comment --comment "cali:4cgmbdWsLmozYhJh" -m comment --comment "Drop VXLAN packets from non-whitelisted hosts" -m multiport --dports 4789 -m addrtype --dst-type LOCAL -j DROP
-A cali-INPUT -i cali+ -m comment --comment "cali:t45BUBhpu3Wsmi1_" -g cali-wl-to-host
-A cali-INPUT -m comment --comment "cali:NOmsycyknYZaGOFf" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-INPUT -m comment --comment "cali:Or0B7eoenKO2p8Bf" -j MARK --set-xmark 0x0/0xf0000
-A cali-INPUT -m comment --comment "cali:AmIfvPGG2lYUK6mj" -j cali-from-host-endpoint
-A cali-INPUT -m comment --comment "cali:79fWWn1SpufdO7SE" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:Mq1_rAdXXH3YkrzW" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -o cali+ -m comment --comment "cali:69FkRTJDvD5Vu6Vl" -j RETURN
-A cali-OUTPUT -p udp -m comment --comment "cali:R_U4Bsx2wPE7s0j6" -m comment --comment "Allow VXLAN packets to other whitelisted hosts" -m multiport --dports 4789 -m addrtype --src-type LOCAL -m set --match-set cali40all-vxlan-net dst -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:tQyQykplzpOIOeFr" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:teLcuBv_-wX6Mf5Z" -m conntrack ! --ctstate DNAT -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:5wMpugAuGXHkWBaX" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-from-wl-dispatch -i cali8c1d1b5578e -m comment --comment "cali:f4emyCiw0KHoF2mM" -g cali-fw-cali8c1d1b5578e
-A cali-from-wl-dispatch -i calif8de763f524 -m comment --comment "cali:njVkqNL0Yu_rgpVj" -g cali-fw-calif8de763f524
-A cali-from-wl-dispatch -m comment --comment "cali:qn38lwYOVoD-Iwg1" -m comment --comment "Unknown interface" -j DROP
-A cali-fw-cali8c1d1b5578e -m comment --comment "cali:NkfgfwzHCwUajtQR" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali8c1d1b5578e -m comment --comment "cali:r419cTlzD_jyddH7" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali8c1d1b5578e -m comment --comment "cali:uD6Bux-bcJaX785q" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali8c1d1b5578e -p udp -m comment --comment "cali:5Yf2d-ubL50udrbB" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali8c1d1b5578e -p ipencap -m comment --comment "cali:-VSXt6mFTm7uJl3B" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali8c1d1b5578e -m comment --comment "cali:eg5D2DCYrC5IW2xH" -j cali-pro-_kJqfZpgUe7r2t4A-14
-A cali-fw-cali8c1d1b5578e -m comment --comment "cali:VewDmg0Na8JelNm9" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali8c1d1b5578e -m comment --comment "cali:rkEEmsRavh6plrcS" -j cali-pro-_4yi5_iSUAwsU8zMHTk
-A cali-fw-cali8c1d1b5578e -m comment --comment "cali:y4jFiZ41zJUJo8x5" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali8c1d1b5578e -m comment --comment "cali:KbxBbJXna6V3RqWx" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calif8de763f524 -m comment --comment "cali:rDcCxSmU2OqEBhOn" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calif8de763f524 -m comment --comment "cali:Zpf9wTS5GKaYzs7z" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calif8de763f524 -m comment --comment "cali:9eMVUpHhde06zzxe" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-calif8de763f524 -p udp -m comment --comment "cali:uhNx3hH1fKFoFLUX" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-calif8de763f524 -p ipencap -m comment --comment "cali:HzagkZqk6sJ7j1Hy" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-calif8de763f524 -m comment --comment "cali:ZItS5RySmmXxb0ZA" -j cali-pro-kns.kube-system
-A cali-fw-calif8de763f524 -m comment --comment "cali:sKmBa12BWifuRIoe" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calif8de763f524 -m comment --comment "cali:8Klpl-gNh5otenpe" -j cali-pro-_u2Tn2rSoAPffvE7JO6
-A cali-fw-calif8de763f524 -m comment --comment "cali:R5jTScc8QpvVTTun" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calif8de763f524 -m comment --comment "cali:Pe-XX3ECEzOWTOiv" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-pi-_3CJ_GmvE9pcCktVJ2ep -p tcp -m comment --comment "cali:I0yo8ky1YADcMXRf" -m comment --comment "Policy calico-apiserver/knp.default.allow-apiserver ingress" -m multiport --dports 5443 -j MARK --set-xmark 0x10000/0x10000
-A cali-pi-_3CJ_GmvE9pcCktVJ2ep -m comment --comment "cali:vcoXnuptt0fs1M8q" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-_4yi5_iSUAwsU8zMHTk -m comment --comment "cali:ZYnaZZFwsSjfXO4C" -m comment --comment "Profile ksa.calico-apiserver.calico-apiserver ingress"
-A cali-pri-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:IQx0SzlDGn6BPv0A" -m comment --comment "Profile kns.calico-apiserver ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:hnAzdaRiFbG1YPHK" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:WqgznqAQ-uYV0oBx" -m comment --comment "Profile ksa.kube-system.coredns ingress"
-A cali-pri-kns.kube-system -m comment --comment "cali:J1TyxtHWd0qaBGK-" -m comment --comment "Profile kns.kube-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.kube-system -m comment --comment "cali:QIB6k7eEKdIg73Jp" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-_4yi5_iSUAwsU8zMHTk -m comment --comment "cali:Pp_dQp2FeNabRhyi" -m comment --comment "Profile ksa.calico-apiserver.calico-apiserver egress"
-A cali-pro-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:_cFTxC141wwWRzyZ" -m comment --comment "Profile kns.calico-apiserver egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:dvDa77rVzpVqK7ZF" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:0-_UPh39dt5XfhmJ" -m comment --comment "Profile ksa.kube-system.coredns egress"
-A cali-pro-kns.kube-system -m comment --comment "cali:tgOR2S8DVHZW3F1M" -m comment --comment "Profile kns.kube-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.kube-system -m comment --comment "cali:HVEEtYPJsiGRXCIt" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-to-wl-dispatch -o cali8c1d1b5578e -m comment --comment "cali:etCcVnkt5afoykMz" -g cali-tw-cali8c1d1b5578e
-A cali-to-wl-dispatch -o calif8de763f524 -m comment --comment "cali:KyGW6SPAmSoyWOiW" -g cali-tw-calif8de763f524
-A cali-to-wl-dispatch -m comment --comment "cali:KnzIWH_KdfVtyTO-" -m comment --comment "Unknown interface" -j DROP
-A cali-tw-cali8c1d1b5578e -m comment --comment "cali:5IlwMrdhpclltJWQ" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali8c1d1b5578e -m comment --comment "cali:CX7RwTBeiRaobAFJ" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali8c1d1b5578e -m comment --comment "cali:8t4ZRdCkd_WX4L25" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali8c1d1b5578e -m comment --comment "cali:6TqT6zCfgyK6hieJ" -m comment --comment "Start of policies" -j MARK --set-xmark 0x0/0x20000
-A cali-tw-cali8c1d1b5578e -m comment --comment "cali:i3v_3H9TmPW_mH0P" -m mark --mark 0x0/0x20000 -j cali-pi-_3CJ_GmvE9pcCktVJ2ep
-A cali-tw-cali8c1d1b5578e -m comment --comment "cali:ZC6ObtT5ano5YMZE" -m comment --comment "Return if policy accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali8c1d1b5578e -m comment --comment "cali:DCBQGCpwz_kIucRx" -m comment --comment "Drop if no policies passed packet" -m mark --mark 0x0/0x20000 -j DROP
-A cali-tw-cali8c1d1b5578e -m comment --comment "cali:FNA15y5CqVpyrB1e" -j cali-pri-_kJqfZpgUe7r2t4A-14
-A cali-tw-cali8c1d1b5578e -m comment --comment "cali:qQ0Gy5o7sO6kP2ZZ" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali8c1d1b5578e -m comment --comment "cali:h1mx9b9E3LMpRD6s" -j cali-pri-_4yi5_iSUAwsU8zMHTk
-A cali-tw-cali8c1d1b5578e -m comment --comment "cali:v6DNcXAdZYYmwiic" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali8c1d1b5578e -m comment --comment "cali:AZrbNyvHrYVZJwz7" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calif8de763f524 -m comment --comment "cali:qZ4eK6zeeKyitTL5" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calif8de763f524 -m comment --comment "cali:ZuV-nLJR0wmAb-ss" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calif8de763f524 -m comment --comment "cali:j0_Ldm4VSK4Jowic" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-calif8de763f524 -m comment --comment "cali:NYdJybw89a2WjUes" -j cali-pri-kns.kube-system
-A cali-tw-calif8de763f524 -m comment --comment "cali:1bpRUj185GWhU4IU" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calif8de763f524 -m comment --comment "cali:-x2n-7_5JnJN_bt3" -j cali-pri-_u2Tn2rSoAPffvE7JO6
-A cali-tw-calif8de763f524 -m comment --comment "cali:eIphKY-NXKIrMFL_" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calif8de763f524 -m comment --comment "cali:scPimW4_CDzhVI9h" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-wl-to-host -m comment --comment "cali:Ee9Sbo10IpVujdIY" -j cali-from-wl-dispatch
-A cali-wl-to-host -m comment --comment "cali:nSZbcOoG1xPONxb8" -m comment --comment "Configured DefaultEndpointToHostAction" -j ACCEPT
COMMIT
# Completed on Fri Apr 15 16:15:57 2022
# Generated by iptables-save v1.8.7 on Fri Apr 15 16:15:57 2022
*nat
:PREROUTING ACCEPT [443:26580]
:INPUT ACCEPT [448:27060]
:OUTPUT ACCEPT [22404:1344630]
:POSTROUTING ACCEPT [22396:1344168]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-7RHXDAWJ5KV23PAT - [0:0]
:KUBE-SEP-KGL5ZYWOU2XUOC7I - [0:0]
:KUBE-SEP-LA4R5XKRGZG3S227 - [0:0]
:KUBE-SEP-OQ2SB2ZUYMWM342A - [0:0]
:KUBE-SEP-QQQZPCT6FQATLOVD - [0:0]
:KUBE-SEP-UOVTLG2GNI3GHP6O - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-2RVHRPU2UIFFE347 - [0:0]
:KUBE-SVC-AWA2CQSXVI7X2GE5 - [0:0]
:KUBE-SVC-CEZPIJSAUFW5MYPQ - [0:0]
:KUBE-SVC-FFPQDOYVPSGJXKDK - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-Z6GDYMWE5TV2NNJN - [0:0]
:cali-OUTPUT - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-fip-dnat - [0:0]
:cali-fip-snat - [0:0]
:cali-nat-outgoing - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -d 192.168.64.1/32 -j DOCKER_OUTPUT
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -d 192.168.64.1/32 -j DOCKER_OUTPUT
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -d 192.168.64.1/32 -j DOCKER_POSTROUTING
-A DOCKER_OUTPUT -d 192.168.64.1/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:40903
-A DOCKER_OUTPUT -d 192.168.64.1/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:47069
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 40903 -j SNAT --to-source 192.168.64.1:53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 47069 -j SNAT --to-source 192.168.64.1:53
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-7RHXDAWJ5KV23PAT -s 192.168.64.3/32 -m comment --comment "kube-system/kube-controller-manager:https-metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-7RHXDAWJ5KV23PAT -p tcp -m comment --comment "kube-system/kube-controller-manager:https-metrics" -m tcp -j DNAT --to-destination 192.168.64.3:10259
-A KUBE-SEP-KGL5ZYWOU2XUOC7I -s 10.244.245.99/32 -m comment --comment "monitoring/grafana:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-KGL5ZYWOU2XUOC7I -p tcp -m comment --comment "monitoring/grafana:http" -m tcp -j DNAT --to-destination 10.244.245.99:3000
-A KUBE-SEP-LA4R5XKRGZG3S227 -s 10.244.245.97/32 -m comment --comment "kubernetes-dashboard/dashboard-metrics-scraper" -j KUBE-MARK-MASQ
-A KUBE-SEP-LA4R5XKRGZG3S227 -p tcp -m comment --comment "kubernetes-dashboard/dashboard-metrics-scraper" -m tcp -j DNAT --to-destination 10.244.245.97:8000
-A KUBE-SEP-OQ2SB2ZUYMWM342A -s 192.168.64.3/32 -m comment --comment "kube-system/kube-scheduler:https-metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-OQ2SB2ZUYMWM342A -p tcp -m comment --comment "kube-system/kube-scheduler:https-metrics" -m tcp -j DNAT --to-destination 192.168.64.3:10259
-A KUBE-SEP-QQQZPCT6FQATLOVD -s 10.244.245.100/32 -m comment --comment "kubernetes-dashboard/kubernetes-dashboard" -j KUBE-MARK-MASQ
-A KUBE-SEP-QQQZPCT6FQATLOVD -p tcp -m comment --comment "kubernetes-dashboard/kubernetes-dashboard" -m tcp -j DNAT --to-destination 10.244.245.100:8443
-A KUBE-SEP-UOVTLG2GNI3GHP6O -s 192.168.64.3/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-UOVTLG2GNI3GHP6O -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 192.168.64.3:6443
-A KUBE-SERVICES -d 10.96.248.242/32 -p tcp -m comment --comment "kube-system/kube-scheduler:https-metrics cluster IP" -m tcp --dport 10259 -j KUBE-SVC-FFPQDOYVPSGJXKDK
-A KUBE-SERVICES -d 10.96.67.240/32 -p tcp -m comment --comment "monitoring/grafana:http cluster IP" -m tcp --dport 3000 -j KUBE-SVC-AWA2CQSXVI7X2GE5
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.96.116.252/32 -p tcp -m comment --comment "kube-system/kube-controller-manager:https-metrics cluster IP" -m tcp --dport 10259 -j KUBE-SVC-2RVHRPU2UIFFE347
-A KUBE-SERVICES -d 10.96.43.64/32 -p tcp -m comment --comment "kubernetes-dashboard/dashboard-metrics-scraper cluster IP" -m tcp --dport 8000 -j KUBE-SVC-Z6GDYMWE5TV2NNJN
-A KUBE-SERVICES -d 10.96.33.132/32 -p tcp -m comment --comment "kubernetes-dashboard/kubernetes-dashboard cluster IP" -m tcp --dport 443 -j KUBE-SVC-CEZPIJSAUFW5MYPQ
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-2RVHRPU2UIFFE347 ! -s 10.244.0.0/16 -d 10.96.116.252/32 -p tcp -m comment --comment "kube-system/kube-controller-manager:https-metrics cluster IP" -m tcp --dport 10259 -j KUBE-MARK-MASQ
-A KUBE-SVC-2RVHRPU2UIFFE347 -m comment --comment "kube-system/kube-controller-manager:https-metrics" -j KUBE-SEP-7RHXDAWJ5KV23PAT
-A KUBE-SVC-AWA2CQSXVI7X2GE5 ! -s 10.244.0.0/16 -d 10.96.67.240/32 -p tcp -m comment --comment "monitoring/grafana:http cluster IP" -m tcp --dport 3000 -j KUBE-MARK-MASQ
-A KUBE-SVC-AWA2CQSXVI7X2GE5 -m comment --comment "monitoring/grafana:http" -j KUBE-SEP-KGL5ZYWOU2XUOC7I
-A KUBE-SVC-CEZPIJSAUFW5MYPQ ! -s 10.244.0.0/16 -d 10.96.33.132/32 -p tcp -m comment --comment "kubernetes-dashboard/kubernetes-dashboard cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-CEZPIJSAUFW5MYPQ -m comment --comment "kubernetes-dashboard/kubernetes-dashboard" -j KUBE-SEP-QQQZPCT6FQATLOVD
-A KUBE-SVC-FFPQDOYVPSGJXKDK ! -s 10.244.0.0/16 -d 10.96.248.242/32 -p tcp -m comment --comment "kube-system/kube-scheduler:https-metrics cluster IP" -m tcp --dport 10259 -j KUBE-MARK-MASQ
-A KUBE-SVC-FFPQDOYVPSGJXKDK -m comment --comment "kube-system/kube-scheduler:https-metrics" -j KUBE-SEP-OQ2SB2ZUYMWM342A
-A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.244.0.0/16 -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-UOVTLG2GNI3GHP6O
-A KUBE-SVC-Z6GDYMWE5TV2NNJN ! -s 10.244.0.0/16 -d 10.96.43.64/32 -p tcp -m comment --comment "kubernetes-dashboard/dashboard-metrics-scraper cluster IP" -m tcp --dport 8000 -j KUBE-MARK-MASQ
-A KUBE-SVC-Z6GDYMWE5TV2NNJN -m comment --comment "kubernetes-dashboard/dashboard-metrics-scraper" -j KUBE-SEP-LA4R5XKRGZG3S227
-A cali-OUTPUT -m comment --comment "cali:GBTAv2p5CwevEyJm" -j cali-fip-dnat
-A cali-POSTROUTING -m comment --comment "cali:Z-c7XtVd2Bq7s_hA" -j cali-fip-snat
-A cali-POSTROUTING -m comment --comment "cali:nYKhEzDlr11Jccal" -j cali-nat-outgoing
-A cali-POSTROUTING -o vxlan.calico -m comment --comment "cali:e9dnSgSVNmIcpVhP" -m addrtype ! --src-type LOCAL --limit-iface-out -m addrtype --src-type LOCAL -j MASQUERADE --random-fully
-A cali-PREROUTING -m comment --comment "cali:r6XmIziWUJsdOK6Z" -j cali-fip-dnat
-A cali-nat-outgoing -m comment --comment "cali:flqWnvo8yq4ULQLa" -m set --match-set cali40masq-ipam-pools src -m set ! --match-set cali40all-ipam-pools dst -j MASQUERADE --random-fully
COMMIT
# Completed on Fri Apr 15 16:15:57 2022
